add more init date for seance, and change byDate to return grouped seance